# pancake-demo

./: .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/include/demo/: demo_session.hpp  session_config_rules.hpp
demo/include/demo/components/: viewer.hpp
demo/include/demo/systems/: menu.hpp  mover.hpp  pick_mouse_entity.hpp
demo/shaders/: gooch_forward_frag.glsl  gooch_forward_vert.glsl  select_deferred_frag.glsl  select_deferred_vert.glsl
demo/src/: demo.cpp  demo_session.cpp  session_config_rules.cpp
demo/src/systems/: menu.cpp  mover.cpp  pick_mouse_entity.cpp
